objects/copado__Selenium_Test_Result__c.object
<CustomObject>
    <fields>
        <fullName>copado__Batch_No__c</fullName>
        <label>Batch No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Elapsed_Time_Seconds__c</fullName>
        <label>Elapsed Time (seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Message__c</fullName>
        <label>Message</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Platform__c</fullName>
        <description>OS + Browser</description>
        <label>Platform</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Result_URL__c</fullName>
        <label>Result URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>copado__Selenium_Test_Run__c</fullName>
        <label>Selenium Test Run</label>
        <referenceTo>copado__Selenium_Test_Run__c</referenceTo>
        <relationshipLabel>Selenium Test Results</relationshipLabel>
        <relationshipName>SeleniumTestResults</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Selenium_Test_Suite__c</fullName>
        <label>Selenium Test Suite</label>
        <referenceTo>copado__Selenium_Test_Suite__c</referenceTo>
        <relationshipLabel>Selenium Test Results</relationshipLabel>
        <relationshipName>Selenium_Test_Results</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <color>#BBBBBB</color>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Starting</fullName>
                    <color>#999999</color>
                    <label>Starting</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#0B6FCE</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed successfully</fullName>
                    <color>#009900</color>
                    <label>Completed successfully</label>
                </value>
                <value>
                    <fullName>Completed with errors</fullName>
                    <color>#CC0000</color>
                    <label>Completed with errors</label>
                </value>
                <value>
                    <fullName>Provider Failure</fullName>
                    <color>#FF6666</color>
                    <label>Provider Failure</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>